[package]
name = "openfhe"
version = "0.3.2"
edition = "2021"
description = "Rust package of the OpenFHE Fully Homomorphic Encryption Library."
license = "BSD-2-Clause"
repository = "https://github.com/Terminal-3/openfhe-rs"

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"

[build-dependencies]
cxx-build = "1.0"

